--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Examples</title>
-    <script src="../build/vents.min.js"></script>
+    <script src="../src/index.js"></script>
     <style>
       body {
         font-family: verdana;
