--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Examples</title>
-    <script src="../src/index.js"></script>
+    <script src="../build/vents.min.js"></script>
     <style>
       body {
         font-family: verdana;
@@ -21,13 +21,23 @@
 
   <body>
     <h1>Vents examples</h1>
+    <h2>Hello World</h2>
     <div id="helloWorld" class="sample-button">Click to say "Hello World"</div>
+
+    <h2>Virtual events</h2>
+    <div id="virtual" class="sample-button">vClick</div>
 
     <script>
       var myVents = new Vents('#helloWorld');
 
-      myVents.add('vclick', function() {
+      myVents.add('click', function() {
         alert('Hello World');
+      });
+
+      var myVirtualVents = new Vents('#virtual');
+
+      myVirtualVents.add('vclick', function() {
+        alert('Virtual click');
       });
     </script>
   </body>
